--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-  "name": "w2-ch4",
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "@babel/plugin-transform-modules-commonjs"
+        ]
+      }
+    }
+  },
+  "name": "dia-4",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -17,20 +26,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.0",
-    "jest": "^29.5.0",
-    "sass": "^1.62.1"
+    "jest": "^29.5.0"
   },
-  "babel": {
-    "env": {
-      "test": {
-        "plugins": [
-          "@babel/plugin-transform-modules-commonjs"
-        ]
-      }
-    }
-  },
-  "description": "",
-  "dependencies": {
-    "node": "^20.1.0"
-  }
+  "description": ""
 }
