--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=Davidgt03_w2-ch4-david-ternavsky-marco-fratini
-sonar.organization=davidgt03
+sonar.projectKey=marzboi_202304-w2ch5-marco-fratini
+sonar.organization=marzboi
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=w2-ch4-david-ternavsky-marco-fratini
+#sonar.projectName=202304-w2ch5-marco-fratini
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
