--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "name": "dia-4",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
