--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "sass": "^1.62.1"
   },
   "description": "Una pruebita"
 }
