--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
+    "sass": "sass sass/styles.scss:styles.css -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
