--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "scripts": {
     "sass": "sass sass/styles.scss:styles.css -w",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -30,5 +30,8 @@
     "jest": "^29.5.0",
     "sass": "^1.62.1"
   },
-  "description": "Una pruebita"
+  "description": "Una pruebita",
+  "prettier": {
+    "singleQuote": true
+  }
 }
